✨ Add containerized check runner
